--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/fakerabbit/slackbot#readme",
   "dependencies": {
-    "@slack/client": "^3.14.1"
+    "@slack/client": "^3.14.1",
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2"
   }
 }
