--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "dependencies": {
     "@slack/client": "^3.14.1",
     "body-parser": "^1.18.2",
-    "express": "^4.16.2"
+    "botkit": "^0.6.4",
+    "express": "^4.16.2",
+    "google": "^2.1.0"
   }
 }
