--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@slack/client": "^3.14.1",
     "body-parser": "^1.18.2",
     "botkit": "^0.6.4",
+    "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "google": "^2.1.0"
   }
