--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/fakerabbit/slackbot#readme",
   "dependencies": {
     "@slack/client": "^3.14.1",
+    "apiai": "^4.0.3",
     "body-parser": "^1.18.2",
     "botkit": "^0.6.4",
     "dotenv": "^4.0.0",
